@@ -1,3 +1,9 @@
+2014-03-13  Vanessa Gil <vanessa.gil@artica.es>
+
+	* lib/PandoraFMS/Core.pm
+	  util/pandora_dbstress.pl: Fixed bug executing
+	pandora_dbstress.
+
 2014-03-05  Sergio Martin <sergio.martin@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Add action recovery fields to the
